# pydownloader

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
pydownloader/: __init__.py  __main__.py  app.py  passwordstore.py  settings.py
pydownloader/providers/: __init__.py  base.py  fikpercom.py  rapidgatornet.py
