[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pydownloader"
version = "0.2.0"
authors = [
    {name = "J. Nathanael Philipp", email = "nathanael@philipp.land"}
]
description="pydownloader."
readme = "README.md"
license = {text = "GPLv3+"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies"]
keywords = ["download"]


[project.urls]
"Homepage" = "https://github.com/jnphilipp/pydownloader"
"Bug Tracker" = "http://github.com/jnphilipp/pydownloader/issues"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
pydownloader = ["py.typed"]

[project.scripts]
pydownloader = "pydownloader:app.main"
